Fix: og:description

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="./style.css" />
     <meta name="twitter:card" content="summary" />
     <meta property="og:title" content="web-ytdl" />
-    <meta property="og:description" content="web-ytdl" />
+    <meta property="og:description" content="YouTubeの動画をダウンロードするための実験的なツール" />
   </head>
   <body>
     <div id="app">
